# n-gram-benchmark

./: .gitignore  LICENSE  Makefile  README.md  input.txt  lorem_text_gen.py  ngram.py  pyproject.toml  requirements.txt  result.txt
